--- a/src/components/scoresheets/scoresheets.css
+++ b/src/components/scoresheets/scoresheets.css
@@ -1,6 +1,19 @@
 .section--scoresheets_container {
-  border: 1px solid black;
+  display: grid;
   min-height: 600px;
   margin: 30px;
   padding: 10px;
+}
+
+.nav--scoresheets_nav {
+  border: 1px solid black;
+  margin: 10px;
+  margin-bottom: 0;
+  padding: 10px;
+}
+
+.section--scoresheet_show {
+  border: 1px solid black;
+  margin: 0;
+  min-height: 500px;
 }
