--- a/src/components/scoresheets/scoresheet.css
+++ b/src/components/scoresheets/scoresheet.css
@@ -4,3 +4,11 @@ span[class^="span--scoresheet-nav"] {
   padding: 10px 30px;
   border-radius: 4px 4px 0px 0px;
 }
+
+table[class^="table--scoresheet-headers"] {
+  margin: 10px;
+}
+
+table[class^="table--scoresheet-headers"] th {
+  width: 100px;
+}
