--- a/src/components/scoresheets/scoresheet.css
+++ b/src/components/scoresheets/scoresheet.css
@@ -10,5 +10,6 @@ table[class^="table--scoresheet-headers"] {
 }
 
 table[class^="table--scoresheet-headers"] th {
-  width: 100px;
+  width: 215px;
+  text-align: left;
 }
