--- a/src/components/App.css
+++ b/src/components/App.css
@@ -33,6 +33,7 @@ body {
   font-family: sans-serif;
   background: linear-gradient(to bottom right, #5FBEDE, #002659);
   /*sample colors*/
+  min-height: 100vw;
   height: 100%;
 }
 
