--- a/src/components/contests/contestShow.css
+++ b/src/components/contests/contestShow.css
@@ -1,34 +1,71 @@
 .main--contestShowPage {
-font-family: 'Caveat', cursive;
-background-color: white;
+  font-family: 'Caveat', cursive;
+  background-color: white;
+  background: linear-gradient(to bottom right, #ffffe8, #b5c9f2);
 }
 
 .div--contest-title {
-font-size: 50px;
+  width: 80%;
+  font-size: 50px;
+  /* margin: 0 auto; */
+  margin-left: 20px;
+  padding-top: 1em;
+  padding-bottom: .5em;
+  display: flex;
+  justify-content: center;
 }
 
 .ul--entries {
-display:flex;
+display: flex;
 flex-direction:column;
-justify-content: start;
+justify-content: center;
+/* margin: auto auto; */
+margin-bottom: 70px;
 }
 
 .li--entry {
-margin-top: 20px;
-height: 40px;
-width: 96%;
-padding-bottom: 20px;
-border-bottom: 1px dotted black;
-font-family: 'Averia Sans Libre', cursive;
-align-items: center;
-font-size: 20px;
-/* margin-left: 15px */
+  display: grid;
+  grid-template-columns: 20% 40% 20% 10% 10%;
+  grid-template-rows: 1;
+  margin: 10px 20px;
+  height: 40px;
+  width: 80%;
+  padding-bottom: 20px;
+  font-family: 'Averia Sans Libre', cursive;
+  /* align-self: center; */
+  font-size: 20px;
+  box-shadow: 1px 1px 5px lightblue;
+  grid-area: entry;
+  /* margin-left: 15px */
 }
 
+.span--entry {
+  grid-column: 2 / 3;
+  align-self: center;
+
+}
+
+
 .img--flag {
-  max-width: 45px;
-  max-height: 30px;
+  max-width: 50px;
+  max-height: 50px;
   align-items: center;
-  margin-left: 30px;
+  margin-left: 20px;
   margin-right: 15px;
+}
+
+.span--rank {
+  /* align-items: baseline; */
+  justify-self: end;
+  grid-column: 5 / 6;
+  margin-right: 30px;
+  font-size: 30px;
+  align-self: center;
+}
+
+.img--medal {
+  grid-column: 4 / 5;
+  height: 60px;
+  justify-self: end;
+
 }
