--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,10 +1,14 @@
 .main--navbar {
   height: 100px;
   width: 100vw;
-  border-bottom: 3px solid black;
+  border-bottom: 1px solid black;
+  box-shadow: 2px 2px 10px lightblue;
   display: grid;
   grid-template-columns: 12.5% 12.5% 12.5% 12.5% 12.5% 12.5% 12.5% 12.5%;
   grid-template-rows: 1fr;
+  /* background: white; */
+  /* linear-gradient(to bottom right, #FFFFFF, #a0a5af); */
+  font-size: 30px;
 }
 
 .Link--logo {
@@ -30,11 +34,9 @@
   justify-self: center;
   text-decoration: none;
   color: black;
-  font-size: 20px;
 }
 
 .Link--contests {
-  font-size: 20px;
   text-decoration: none;
   grid-column: 6 / 7;
   align-self: center;
@@ -43,7 +45,6 @@
 }
 
 .Link--home {
-  font-size: 20px;
   text-decoration: none;
   grid-column: 7 / 8;
   align-self: center;
