Add ui spinner, fix warnings in console, add entry links

--- a/src/components/auth/signin.css
+++ b/src/components/auth/signin.css
@@ -1,3 +1,16 @@
 .facebook-button {
-  
+  grid-column: 8 / 9;
+  align-self: center;
+  justify-self: center;
+}
+
+.facebook-button:hover {
+  color: black;
+  background-color:white;
+}
+
+.login-wrapper {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
