--- a/src/components/App.css
+++ b/src/components/App.css
@@ -1,32 +1,3 @@
-/* .App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-} */
-
 body {
   margin: 0;
   padding: 0;
@@ -68,4 +39,36 @@ ul, li {
   padding: 0;
   align-self: center;
   justify-content: center;
+}
+
+.div--spinnerModal {
+  background: linear-gradient(to bottom right, #ffffe8, #b5c9f2);
+  position: absolute;
+  z-index: 10;
+  top: 102px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+@keyframes spinner {
+  to {transform: rotate(360deg);}
+}
+
+.div--spinner:before {
+  content: '';
+  box-sizing: border-box;
+  position: absolute;
+  top: 40%;
+  left: 46%;
+  width: 100px;
+  height: 100px;
+  margin-top: -10px;
+  margin-left: -10px;
+  border-radius: 50%;
+  border: 1px solid #f6f;
+  border-top-color: #0e0;
+  border-right-color: #0dd;
+  border-bottom-color: #f90;
+  animation: spinner .6s linear infinite;
 }
