--- a/src/components/contests/contestShow.css
+++ b/src/components/contests/contestShow.css
@@ -1,3 +1,8 @@
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
 .main--contestShowPage {
   font-family: 'Caveat', cursive;
   background-color: white;
@@ -8,7 +13,7 @@
   width: 80%;
   font-size: 50px;
   /* margin: 0 auto; */
-  margin-left: 20px;
+  margin: 0 auto;
   padding-top: 1em;
   padding-bottom: .5em;
   display: flex;
@@ -17,25 +22,26 @@
 
 .ul--entries {
 display: flex;
-flex-direction:column;
+flex-direction: column;
 justify-content: center;
-/* margin: auto auto; */
+margin: 0 auto;
 margin-bottom: 70px;
+width: 80%;
 }
 
 .li--entry {
   display: grid;
   grid-template-columns: 20% 40% 20% 10% 10%;
   grid-template-rows: 1;
-  margin: 10px 20px;
+  margin: 0 auto;
   height: 40px;
-  width: 80%;
+  width: 100%;
   padding-bottom: 20px;
   font-family: 'Averia Sans Libre', cursive;
-  /* align-self: center; */
   font-size: 20px;
   box-shadow: 1px 1px 5px lightblue;
   grid-area: entry;
+  margin-bottom: 20px;
   /* margin-left: 15px */
 }
 
