--- a/src/components/scoresheets/scoresheets.css
+++ b/src/components/scoresheets/scoresheets.css
@@ -9,10 +9,11 @@
   margin: 10px;
   margin-bottom: 0;
   padding: 10px;
+  font-size: 28px;
 }
 
 .section--scoresheet_show {
-  border: 1px solid black;
+  border: 1px solid lightgrey;
   margin: 0;
   min-height: 500px;
   border-radius: 4px;
