--- a/src/components/scoresheets/scoresheet_entry.css
+++ b/src/components/scoresheets/scoresheet_entry.css
@@ -5,6 +5,8 @@
 section[class^='section--entry_parent_'] {
   display: flex;
   font-size: 22px;
+  position: relative;
+  margin: 16px;
 }
 
 section[class^='section--entry_parent_'] img {
@@ -14,8 +16,9 @@ section[class^='section--entry_parent_'] img {
 
 section[id^='section--entry_score'] {
   display: grid;
-  width: 90%;
-  grid-template-columns: 40% 40%;
+  width: 80%;
+  grid-template-columns: 45% 50%;
+  justify-items: center;
 }
 
 #li--entry_country {
@@ -36,10 +39,15 @@ section[class^='section--entry_parent_'] li {
 }
 
 section[id^='section--entry_score_form'] {
-  max-width: 600px;
   display: grid;
-  grid-template-columns: 40% 40%;
+  grid-template-columns: 40% 60%;
   grid-template-rows: auto;
+  justify-items: left;
+}
+
+.ul--entry_input {
+  width: 100%;
+  height: 100%;
 }
 
 .ul--entry_input li {
@@ -60,7 +68,8 @@ section[id^='section--entry_score_form'] {
 }
 
 .ul--entry_input textarea {
-  width: 90%;
+  width: 100%;
+  height: 100%;
   border: 1px solid lightgrey;
   border-radius: 4px;
   resize: none;
