--- a/src/components/entries/entryShow.css
+++ b/src/components/entries/entryShow.css
@@ -1,29 +1,24 @@
 .section--entryShow {
   display: grid;
   grid-template-columns: 100px 1fr 1fr 1fr 1fr 1fr 1fr 100px;
-  grid-template-rows: 1fr 3fr;
+  grid-template-rows: 200px 90px 1fr 1fr;
   margin-top: 50px;
 }
 
 .article--countryName {
-  grid-column: 3 / 6;
+  grid-column: 4 / 6;
   font-size: 50px;
-  padding: 100px;
   font-family: "Averia Sans Libre";
   position: relative;
-}
-
-.Link--backArrow {
-  grid-row-start: 2;
-}
-
-.Link--nextArrow {
-  grid-column: 8;
-  grid-row-start: 2;
+  text-align: center;
 }
 
 .figure--YouTube {
-  grid-column: 2 / 5;
+  grid-row-start: 3;
+  grid-column: 1 / 9;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
 }
 
 .p--songDetails {
@@ -31,14 +26,18 @@
 }
 
 .aside--details {
-  grid-column: 5 / 8;
+  display: flex;
+  flex-direction: row;
+  grid-column: 4 / 6;
+  text-align: center;
   grid-row-start: 2;
   font-size: 30px;
+  justify-content: space-between;
 }
 
 .article--countryName > img {
   width: auto;
   height: 175px;
   position: absolute;
-  left: -175px;
+  left: -190px;
 }
