--- a/src/components/splash/splash.css
+++ b/src/components/splash/splash.css
@@ -35,6 +35,7 @@
   flex-wrap: wrap;
   width: 400px;
   height: 400px;
+  margin-left: 8em;
 }
 
 .div--splashmsg p {
@@ -45,6 +46,7 @@
   padding: 10px;
   font-family: 'Gill Sans', sans-serif;
   text-align: center;
+  text-shadow: 1px 2px black;
 }
 
 p.eurovision {
