--- a/src/components/App.css
+++ b/src/components/App.css
@@ -8,14 +8,13 @@ body {
   min-height: 100vh;
   height: 100%;
   font-family: 'Caveat', cursive;
-
-
 }
 
 .main {
   height: 100%;
   min-height: 100vh;
   position: relative;
+  background-color: #ffffff;
 }
 
 h1, p, span, text, content, div, section {
