--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -6,10 +6,9 @@
   display: grid;
   grid-template-columns: 12.5% 12.5% 12.5% 12.5% 12.5% 12.5% 12.5% 12.5%;
   grid-template-rows: 1fr;
-  /* background: white; */
+  background: white;
   /* linear-gradient(to bottom right, #FFFFFF, #a0a5af); */
-  background: linear-gradient(to bottom right, #ffffe8, #b5c9f2);
-  font-size: 30px;
+
 }
 
 .Link--logo {
@@ -20,7 +19,8 @@
   align-self: center;
   text-decoration: none;
   margin-left: 30px;
-  color: black
+  color: black;
+  font-family: 'Caveat', cursive
 }
 
 /* .main--navbar Link {
@@ -63,7 +63,7 @@
   align-self: center;
   justify-self: center;
   border: 1px solid black;
-  border-radius: 12px;
+  border-radius: 7px;
   color: white;
   background-color:black;
   padding: 7px 15px;
@@ -71,6 +71,6 @@
 
 .Link--logout:hover {
   color: black;
-  background-color:white;
+  background-color: white;
 
 }
