--- a/src/components/entries/entryIndexItem.css
+++ b/src/components/entries/entryIndexItem.css
@@ -6,7 +6,6 @@
   height: 40px;
   width: 100%;
   padding-bottom: 20px;
-  font-family: 'Averia Sans Libre', cursive;
   font-size: 20px;
   box-shadow: 1px 1px 5px lightblue;
   grid-area: entry;
@@ -33,7 +32,7 @@
   /* align-items: baseline; */
   justify-self: end;
   grid-column: 5 / 6;
-  margin-right: 30px;
+  /* margin-right: 30px; */
   font-size: 30px;
   align-self: center;
 }
