--- a/src/components/scoresheets/scoresheet.css
+++ b/src/components/scoresheets/scoresheet.css
@@ -7,13 +7,22 @@ span[class^="span--scoresheet-nav"] {
 
 table[class^="table--scoresheet-headers"] {
   margin: 10px;
-  font-size: 26px;
+  font-size: 24px;
   padding: 4px;
   border-bottom: 1px solid lightgrey;
 }
 
-table[class^="table--scoresheet-headers"] th {
-  width: 230px;
+img {
+  font-size: 8px;
+}
+
+table[class^="table--scoresheet-headers"] div {
+  width: 225px;
+  height: 50px;
+  display: flex;
+  justify-content: space-around;
+  align-content: flex-start;
+  flex-wrap: wrap;
   text-align: left;
 }
 
