--- a/src/components/contests/contestShow.css
+++ b/src/components/contests/contestShow.css
@@ -5,7 +5,13 @@ a {
 
 .main--contestShowPage {
   background-color: white;
+  display: flex;
+  padding: 20px;
   /* background: linear-gradient(to bottom right, #ffffe8, #b5c9f2); */
+}
+
+.left-side-show {
+  width: 50%;
 }
 
 .div--contest-title {
@@ -13,7 +19,7 @@ a {
   font-family: 'Lato', sans-serif;
   /* font-family: 'Nunito', sans-serif; */
   /* font-family: 'Quicksand', sans-serif; */
-  width: 80%;
+  width: 100vw;
   font-size: 50px;
   /* margin: 0 auto; */
   margin: 0 auto;
@@ -24,57 +30,9 @@ a {
 }
 
 .ul--entries {
-display: flex;
-flex-direction: column;
-justify-content: center;
-margin: 0 auto;
-margin-bottom: 70px;
-align-items: center;
-}
-
-.li--entry {
-  display: grid;
-  grid-template-columns: 20% 40% 20% 10% 10%;
-  grid-template-rows: 1;
-  margin: 10px 20px;
-  height: 40px;
-  width: 80vw;
-  padding-bottom: 20px;
-  /* font-family: 'Averia Sans Libre', cursive; */
-  /* align-self: center; */
-  font-size: 20px;
-  box-shadow: 1px 1px 5px lightblue;
-  grid-area: entry;
-  /* margin-left: 15px */
-}
-
-.span--entry {
-  grid-column: 2 / 3;
-  align-self: center;
-
-}
-
-
-.img--flag {
-  max-width: 50px;
-  max-height: 50px;
+  display: flex;
+  flex-direction: column;
   align-items: center;
-  margin-left: 20px;
-  margin-right: 15px;
-}
-
-.span--rank {
-  /* align-items: baseline; */
-  justify-self: end;
-  grid-column: 5 / 6;
-  margin-right: 30px;
-  font-size: 30px;
-  align-self: center;
-}
-
-.img--medal {
-  grid-column: 4 / 5;
-  height: 60px;
-  justify-self: end;
-
+  margin: 10px auto;
+  margin-bottom: 70px;
 }
