--- a/src/components/entries/entryQuickView.css
+++ b/src/components/entries/entryQuickView.css
@@ -1,16 +1,11 @@
 #pop-out {
   height: 100vh;
-  width: 100%;
-  position: relative;
+  width: 48%;
+  padding-top: 100px;
 }
 
 #quick-view {
-  position: fixed;
-  right: 20px;
   display: flex;
-  align-items: center;
   flex-direction: column;
-  width: 560px;
-  margin-top: 100px;
   text-align: center;
 }
