--- a/src/components/entries/entryIndexItem.css
+++ b/src/components/entries/entryIndexItem.css
@@ -6,6 +6,7 @@
   height: 40px;
   width: 100%;
   padding-bottom: 20px;
+  padding-right: 10px;
   font-size: 20px;
   box-shadow: 1px 1px 5px lightblue;
   grid-area: entry;
