--- a/src/components/scoresheets/scoresheet_entry.css
+++ b/src/components/scoresheets/scoresheet_entry.css
@@ -18,25 +18,32 @@ section[class^='section--entry_parent_'] img {
 section[id^='section--entry_score'] {
   display: grid;
   max-width: 1400px;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: 70% 30%;
   justify-items: center;
 }
 
 #li--entry_country {
   display: flex;
   box-sizing: border-box;
-  width: 200px;
+  width: 160px;
+  margin-right: 40px;
   justify-content: space-between;
   padding-right: 60px;
 }
 
 section[class^='section--entry_parent_'] li {
   display: flex;
+  box-sizing: border-box;
   margin: 0 10px;
+  padding-left: 40px;
   height: 40px;
-  width: 200px;
+  width: 160px;
   align-items: center;
   justify-content: flex-start;
+}
+
+#li--entry-score {
+  justify-content: flex-end;
 }
 
 section[class^='section--entry_parent_'] p {
@@ -47,7 +54,7 @@ section[id^='section--entry_score_form'] {
   display: grid;
   width: 100%;
   height: auto;
-  grid-template-columns: 40% 10%;
+  grid-template-columns: 55% 40%;
   grid-template-rows: 70% 25% 15%;
   grid-template-areas:
     "score_name score_num"
