--- a/src/components/contests/contestShow.css
+++ b/src/components/contests/contestShow.css
@@ -6,33 +6,35 @@ a {
 .main--contestShowPage {
   background-color: white;
   display: flex;
+  flex-wrap: wrap;
   padding: 20px;
   max-width: 100vw;
   overflow-x: hidden;
 }
 
 .left-side-show-full {
-  max-width: 90%;
+  width: 90%;
   margin: 0 auto;
 }
 
 .left-side-show-half {
-  width: 52%;
+  width: 45%;
+  margin-right: 24px;
 }
 
 .div--contest-title {
-  /* font-family: 'Caveat', cursive; */
   font-family: 'Lato', sans-serif;
-  /* font-family: 'Nunito', sans-serif; */
-  /* font-family: 'Quicksand', sans-serif; */
-  width: 100vw;
+  width: 100%;
+  height: auto;
   font-size: 50px;
-  /* margin: 0 auto; */
   margin: 0 auto;
   padding-top: 1em;
   padding-bottom: .5em;
-  display: flex;
-  justify-content: center;
+  grid-area: title;
+}
+
+.div--contest-title p {
+  text-align: center;
 }
 
 .ul--entries {
